# YAP

./: .env  app.py  dynamic_auth.py  forms.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  test_env.py  vocabpractice.md
attached_assets/: content-1741880116820.md
instance/: language_app.db  test.db
migrations/: manual_migration.py
migrations/versions/: 0ee17429ec06_remove_target_language_from_user_model.py  e4c0a491aee9_add_wallet_address_to_user_model.py
nextjs-app/: next.config.ts  package-lock.json  package.json
nextjs-app/src/app/: page.tsx
nextjs-app/src/components/: navbar-demo.tsx
src/app/: layout.tsx  page.tsx
src/components/ui/: README.md  tubelight-navbar.tsx
static/css/: custom.css  style.css
static/js/: chat.js  dynamic-auth.js  exercises.js  main.js  speaking-practice.js  translation.js  tubelight-navbar.js  vocabulary.js  voice.js  wallet-connect.js
templates/: base.html  chat.html  daily_practice.html  error.html  exercises.html  index.html  login.html  nextjs.html  preferences.html  profile.html  register.html  tubelight_base.html  vocabulary.html
utils/: openai_helper.py
